[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/font/OldStandard-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/img/button.png" type="Texture" id=2]
[ext_resource path="res://rsc/shop/Shop.gd" type="Script" id=3]
[ext_resource path="res://assets/img/rainbow.png" type="Texture" id=4]
[ext_resource path="res://assets/img/ball.png" type="Texture" id=5]
[ext_resource path="res://assets/img/interrogative sign.png" type="Texture" id=7]
[ext_resource path="res://assets/img/home.png" type="Texture" id=8]
[ext_resource path="res://rsc/counter/Counter.tscn" type="PackedScene" id=9]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 60
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 70
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=4]

[sub_resource type="DynamicFont" id=5]
size = 18
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.341176, 0.105882, 0.129412, 1 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 1 )

[node name="Shop" type="Node"]
script = ExtResource( 3 )

[node name="ItemsContainer" type="CenterContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -143.0
margin_top = -143.0
margin_right = 143.0
margin_bottom = 143.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="ItemsContainer"]
margin_right = 286.0
margin_bottom = 286.0
custom_constants/vseparation = 30
custom_constants/hseparation = 30
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button1" type="TextureButton" parent="ItemsContainer/GridContainer" groups=[
"b",
]]
margin_right = 128.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )

[node name="Ball1" type="TextureRect" parent="ItemsContainer/GridContainer/Button1"]
modulate = Color( 0, 0, 0, 1 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -24.5
margin_top = -24.0
margin_right = 24.5
margin_bottom = 24.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy1" type="TextureButton" parent="ItemsContainer/GridContainer/Button1"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball1Label" type="Label" parent="ItemsContainer/GridContainer/Button1"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -46.5
margin_top = -14.0
margin_right = 46.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
text = "10.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="TextureButton" parent="ItemsContainer/GridContainer" groups=[
"b",
]]
margin_left = 158.0
margin_right = 286.0
margin_bottom = 128.0
texture_normal = ExtResource( 2 )

[node name="Bg2" type="TextureRect" parent="ItemsContainer/GridContainer/Button2"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -36.0
margin_top = -36.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy2" type="TextureButton" parent="ItemsContainer/GridContainer/Button2"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bg2Label" type="Label" parent="ItemsContainer/GridContainer/Button2"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -46.5
margin_top = -14.0
margin_right = 46.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
text = "10.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button3" type="TextureButton" parent="ItemsContainer/GridContainer" groups=[
"b",
]]
self_modulate = Color( 0.341176, 0.0235294, 0.313726, 1 )
margin_top = 158.0
margin_right = 128.0
margin_bottom = 286.0
texture_normal = ExtResource( 2 )

[node name="Label" type="Label" parent="ItemsContainer/GridContainer/Button3"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -38.0
margin_right = 33.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.552941, 0, 1 )
text = "x1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x1Label" type="Label" parent="ItemsContainer/GridContainer/Button3"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -8.5
margin_top = -14.0
margin_right = 8.5
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy3" type="TextureButton" parent="ItemsContainer/GridContainer/Button3" groups=[
"x1",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button4" type="TextureButton" parent="ItemsContainer/GridContainer" groups=[
"b",
]]
margin_left = 158.0
margin_top = 158.0
margin_right = 286.0
margin_bottom = 286.0
texture_normal = ExtResource( 2 )

[node name="Label2" type="Label" parent="ItemsContainer/GridContainer/Button4"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -33.0
margin_top = -38.0
margin_right = 33.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 0.552941, 0, 1 )
text = "x2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buy4" type="TextureButton" parent="ItemsContainer/GridContainer/Button4" groups=[
"x2",
]]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = 24.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="x2Label" type="Label" parent="ItemsContainer/GridContainer/Button4"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -38.0
margin_top = -14.0
margin_right = 38.0
margin_bottom = 24.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 1, 0.0392157, 1 )
text = "1.000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Shop" type="Label" parent="."]
anchor_right = 1.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 1, 0, 0.713726, 1 )
text = "Tienda!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Home" type="TextureButton" parent="."]
modulate = Color( 0.87451, 0.552941, 0.552941, 1 )
anchor_left = 1.0
anchor_right = 1.0
margin_left = -65.0
margin_top = 8.0
margin_right = -8.0
margin_bottom = 65.0
texture_normal = ExtResource( 8 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeBgColor" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -212.0
margin_right = 240.0
margin_bottom = 228.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ChangeBgColor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Establece el color de fondo para todo el juego pero con la ventaja de que  podras formarlo vos mismo"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPicker" parent="ChangeBgColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -180.0
margin_top = -124.0
margin_right = 268.0
margin_bottom = 377.0
rect_scale = Vector2( 0.75, 0.75 )
color = Color( 0.470588, 0.317647, 0.317647, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="Button" parent="ChangeBgColor"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -20.0
margin_right = -8.0
margin_bottom = 20.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Listo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChangeBallColor" type="Panel" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -216.0
margin_top = -212.0
margin_right = 240.0
margin_bottom = 228.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="ChangeBallColor"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Establece el color de la pelota vos mismo"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerBall" type="ColorPicker" parent="ChangeBallColor"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -176.0
margin_top = -120.0
margin_right = 272.0
margin_bottom = 381.0
rect_scale = Vector2( 0.75, 0.75 )
color = Color( 0.470588, 0.317647, 0.317647, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ready" type="Button" parent="ChangeBallColor"]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -88.0
margin_top = -20.0
margin_right = -8.0
margin_bottom = 20.0
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 7 )
text = "Listo"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ball" type="TextureRect" parent="ChangeBallColor"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -84.0
margin_top = -83.0
margin_right = -8.0
margin_bottom = -8.0
texture = ExtResource( 5 )

[node name="Counter" parent="." instance=ExtResource( 9 )]
anchor_top = 1.0
anchor_right = 0.0
anchor_bottom = 1.0
margin_left = 0.0
margin_top = -82.0
margin_right = 800.0
margin_bottom = 0.0
[connection signal="pressed" from="ItemsContainer/GridContainer/Button1/Buy1" to="." method="_on_Buy1_pressed"]
[connection signal="pressed" from="ItemsContainer/GridContainer/Button2/Buy2" to="." method="_on_Buy2_pressed"]
[connection signal="pressed" from="ItemsContainer/GridContainer/Button3/Buy3" to="." method="_on_Buy3_pressed"]
[connection signal="pressed" from="ItemsContainer/GridContainer/Button4/Buy4" to="." method="_on_Buy4_pressed"]
[connection signal="pressed" from="Home" to="." method="_on_Home_pressed"]
[connection signal="color_changed" from="ChangeBgColor/ColorPicker" to="." method="_on_ColorPicker_color_changed"]
[connection signal="pressed" from="ChangeBgColor/Ready" to="." method="_on_Ready_pressed"]
[connection signal="color_changed" from="ChangeBallColor/ColorPickerBall" to="." method="_on_ColorPickerBall_color_changed"]
[connection signal="pressed" from="ChangeBallColor/Ready" to="." method="_on_Ready_pressed"]

[editable path="Counter"]
